# rag-benchmark-system

./: .env.example  .gitignore  Dockerfile  RAG_Benchmark_Execution_Plan_1.md  README.md  main.py  pyproject.toml
app/: dashboard.py
config/: d2_extractive.yaml  d2_glm51.yaml  d2_minimax_m27.yaml  default.yaml  glm5_example.yaml  wiki18_21m.yaml  wiki18_21m_sharded.yaml  wiki18_21m_sharded_hotpot_screening_decompose_noorig3.yaml  wiki18_21m_sharded_hotpot_screening_decompose_noorig3_stability.yaml  wiki18_21m_sharded_hotpot_screening_decompose_noorig3_stability_title_prefilter_k30.yaml  wiki18_21m_sharded_hotpot_screening_decompose_noorig3_stability_title_prefilter_k50.yaml  wiki18_21m_sharded_hotpot_screening_decompose_noorig4.yaml  wiki18_21m_sharded_hotpot_screening_decompose_orig3.yaml  wiki18_21m_sharded_hotpot_screening_off.yaml  wiki18_21m_sharded_hotpot_screening_off_title_prefilter_k30.yaml  wiki18_21m_sharded_hotpot_screening_off_title_prefilter_k50.yaml  wiki18_21m_sharded_llm.yaml  wiki18_21m_sharded_official_baseline.yaml  wiki18_21m_sharded_official_llm_sanity.yaml  wiki18_21m_sharded_official_llm_sanity_v2.yaml  wiki18_dense.yaml  wiki18_smoke.yaml
experiments/: phase4_failure_analysis.json  phase4_results.csv  phase4_results.json
report/: case_studies.json  d2_multi_generator_comparison_20260405.md  failure_comparison_table.md  findings_summary.md  hotpot_21m_improvement_analysis_20260308.md  hotpot_closure_e2e_sanity_20260310.md  hotpot_closure_e2e_sanity_v2_20260310.md  hotpot_failure_taxonomy_20260309.md  hotpot_ivf_benchmark_20260308.md  (+8 more)
(+123 files in other folders)
