[project]
name = "rag-benchmark-study"
version = "0.1.0"
description = "Modular RAG benchmark project with component-level evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "fpdf2>=2.7.0",
    "httpx>=0.27.0",
    "kaleido>=0.2.1",
    "nltk>=3.8",
    "pandas>=2.0.0,<3",
    "pdfplumber>=0.11.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.40.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rag-baseline = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
